cmake_minimum_required(VERSION 3.8)
project(crossing_gui_ros2_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

# THESE ARE NECESSARY FOR THE MSG GENERATION:
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)


rosidl_generate_interfaces(${PROJECT_NAME}
  # Add messages here:
  "msg/VehicleInputMsg.msg"
  "msg/PedestrianInputMsg.msg"
  "msg/PedestrianSpeedInputMsg.msg"
  "msg/Log.msg"
  "msg/SimulationOutput.msg"
  # Add services here:
  # ---
  "srv/GetGuiParam.srv"
  DEPENDENCIES std_msgs geometry_msgs builtin_interfaces # Add packages that above messages depend on.
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
