<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decision_making_package</name>
  <version>0.0.0</version>
  <description>Decision making algorithm for pedestrian crossing simulation - urxel master thesis.</description>
  <maintainer email="urxel@student.kit.edu">bogdan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>crossing_gui_ros2_interfaces</exec_depend>
  <exec_depend>decision_making_interface</exec_depend>
  <!-- <exec_depend>crossing_gui_ros2</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
